--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "knex": "^0.17.5",
-    "knex-cleaner": "^1.1.4"
+    "knex-cleaner": "^1.1.4",
+    "sqlite3": "^4.0.9"
   }
 }
